examples/firepad.css
/* ... */
.powered-by-firepad:hover {
  opacity: 1;
}

.firepad-toolbar {
  position: absolute;
  top: 20px;
  left: 10px;

  /* Don't select text when double-clicking in toolbar */
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.firepad-btn-group {
  margin: 0 5px;
  display: inline-block;
}

a.firepad-btn, a.firepad-btn:visited, a.firepad-btn:active {
  font-family: "Arial" sans-serif;
  cursor: pointer;
  text-decoration: none;
  display: inline-block;
  padding: 6px 6px 4px 6px;
  text-align: center;
  vertical-align: middle;
  font-size: 16px;
  background-color: #fcfcfc;
  border: 1px solid #c9c9c9;
  border-bottom-width: 4px;
  color: #9c9c9c;
}

a.firepad-btn:hover {
  color: #fff;
  background-color: #ffbf86;
  border-color: #e6a165;
}

a.firepad-btn:active {
  -webkit-box-shadow: inset 0 2px 4px rgba(0,0,0,0.15),0 1px 2px rgba(0,0,0,0.05);
  -moz-box-shadow: inset 0 2px 4px rgba(0,0,0,0.15),0 1px 2px rgba(0,0,0,0.05);
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.15),0 1px 2px rgba(0,0,0,0.05);
}

.firepad-btn-group > .firepad-btn {
  -webkit-border-radius: 0;
  -moz-border-radius: 0;
  border-radius: 0;
  margin-left: -1px;
}


.firepad-btn-group > .firepad-btn:first-child {
  border-bottom-left-radius: 6px;
  border-top-left-radius: 6px;
  -webkit-border-bottom-left-radius: 6px;
  -webkit-border-top-left-radius: 6px;
  -moz-border-radius-bottomleft: 6px;
  -moz-border-radius-topleft: 6px;
  margin-left: 0px;
}

.firepad-btn-group > .firepad-btn:last-child {
  border-bottom-right-radius: 6px;
  border-top-right-radius: 6px;
  -webkit-border-bottom-right-radius: 6px;
  -webkit-border-top-right-radius: 6px;
  -moz-border-radius-bottomright: 6px;
  -moz-border-radius-topright: 6px;
}

.firepad-dropdown {
  position: relative;
}

.firepad-dropdown-menu {
  position: absolute;
  top: 100%;
  left: 0;
  z-index: 1000;
  display: none;
  float: left;
  padding: 4px 0;
  margin: 4px 0 0;
  list-style: none;
  background-color: #ffffff;
  border: 1px solid #ccc;
  border: 1px solid rgba(0, 0, 0, 0.2);
  *border-right-width: 2px;
  *border-bottom-width: 2px;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
  -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
  -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
  -webkit-background-clip: padding-box;
  -moz-background-clip: padding;
  background-clip: padding-box;
}

.firepad-dropdown-menu a {
  text-align: left;
  display: block;
  padding: 3px 15px;
  clear: both;
  font-weight: normal;
  line-height: 18px;
  color: #333333;
  white-space: nowrap;
}

.firepad-dropdown-menu a:hover {
  color: #fff;
  text-decoration: none;
  background-color: #ffbf86;
}

.firepad-color-dropdown-item {
  height: 25px;
  width: 25px;
}

/********************************************************************
 * Generated via icomoon.io.
  If you want to make changes, you can go to http://icomoon.io/app/, go to the bottom right and click the
  database-looking icon, then "Load Session" and use the checked-in font/firepad-icomoon.json file.

  Note: When you download the generated font, turn on the "Base 64 Encode ..." option to generate the font inline
  in the CSS (to avoid needing to distribute a font file with firepad).
 */
@font-face {
  font-family: 'firepad';
  src:url('firepad.eot');
}
/* ... */

